[gd_scene load_steps=3 format=3 uid="uid://bvuuet4x003bd"]

[ext_resource type="Script" uid="uid://dp0r3yfvb5xb7" path="res://scenes/Inventory/inventory_ui.gd" id="1_wri4e"]
[ext_resource type="PackedScene" uid="uid://b2i8erscoqklb" path="res://scenes/Inventory/inventory_slot.tscn" id="2_pilxw"]

[node name="Inventory" type="Control"]
layout_mode = 3
anchors_preset = 0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_wri4e")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -133.5
offset_top = -61.5
offset_right = 133.5
offset_bottom = 61.5
grow_horizontal = 2
grow_vertical = 2
color = Color(0.169245, 0.169245, 0.169245, 1)

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -39.5
offset_top = -54.0
offset_right = 39.5
offset_bottom = -31.0
grow_horizontal = 2
grow_vertical = 2
text = "Inventory:"

[node name="InventorySlots" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -25.0
offset_right = 120.0
offset_bottom = 56.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_constants/separation = 10
alignment = 1
metadata/_edit_lock_ = true

[node name="InventorySlot" parent="InventorySlots" instance=ExtResource("2_pilxw")]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_horizontal = 6

[node name="InventorySlot2" parent="InventorySlots" instance=ExtResource("2_pilxw")]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2

[node name="InventorySlot3" parent="InventorySlots" instance=ExtResource("2_pilxw")]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2

[node name="InventorySlot4" parent="InventorySlots" instance=ExtResource("2_pilxw")]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2

[node name="InventorySlot5" parent="InventorySlots" instance=ExtResource("2_pilxw")]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
